fixed code overflow

--- a/assets/css/others.css
+++ b/assets/css/others.css
@@ -60,6 +60,7 @@ code {
         font-style: italic;
         border-radius: .2em;
         background-color: transparent;
+        overflow: auto;
     }
 }
 
